force-app/main/default/objects/Project_Discount_Limit__c/fields/Max_Disccount__c.field-meta.xml
<CustomField>
    <fullName>Max_Disccount__c</fullName>
    <label>Max Disccount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>