force-app/main/default/objects/Project_Discount_Limit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Discount Limits</relationshipLabel>
    <relationshipName>Project_Discount_Limits</relationshipName>
    <type>Lookup</type>
</CustomField>